--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>Your Name</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <meta name="description"
+    content="Assignment portal for Naomi Gonzalez in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+
+  <title>Naomi González Assignment Portal</title>
 </head>
 
 <body>
-  <h1>Your Name</h1>
+  <header class="box">
+    <img class="image1" src="images/naomi-gonzalez.jpg" alt="Naomi Gonzalez">
+    <h1>Naomi Gonzalez</h1>
+  </header>
+
+  <main class="lessons">
+    <h2>WDD 230: Assignment Portal</h2>
+    <ul>
+
+      <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
+      <li>Lesson 01: <a href="#">Design Principles Document</a></li>
+
+    </ul>
+  </main>
+  <footer>
+    <p>&copy; <span id="year"></span> | Naomi Gonzalez | Mexico
+      <a href="https://www.byui.edu/online"> | BYUI Online Learning</a></p>
+    <p>
+      <span id="last_update"></span>
+    </p>
+
+  </footer>
+  <script src="js/dates.js"></script>
+
 </body>
 
 </html>
