--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul>
 
       <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
-      <li>Lesson 01: <a href="#">Design Principles Document</a></li>
+      <li>Lesson 01: <a href="lesson1/design-principles.html">Design Principles Document</a></li>
 
     </ul>
   </main>
