--- a/lesson1/design-principles.html
+++ b/lesson1/design-principles.html
@@ -34,7 +34,7 @@
           White Space and Clean Design
           <a href="https://www.wealthsimple.com/en-ca/" target="_blank">Wealth Simple</a>
         </h3>
-        <img src="images/wealthsimple-white.PNG" alt="Wealth Simple" width="200" />
+        <img src="images/wealthsimple-white.jpg" alt="Wealth Simple" width="200" />
         <p>
           This website is a clear example of how clean it looks with White Space around it. It enhances the user's
           readability experience and increases comprehension because there is only the necessary text, and it uses good
@@ -47,7 +47,7 @@
           <br>
           <a href="https://www.pinterest.com.mx/" target="_blank">Pinterest</a>
         </h3>
-        <img src="images/pinterest-alignment.PNG" alt="Pinterest" width="200" />
+        <img src="images/pinterest-alignment.jpg" alt="Pinterest" width="200" />
         <br>
         <p>
           Pinterest is an excellent alignment website example because you can feel the sense of direction, unity, and
@@ -61,7 +61,7 @@
           <br>
           <a href="https://www.estudiotahmek.com/" target="_blank">Estudio Tahmek</a>
         </h3>
-        <img src="images/tahmek-contrast.PNG" alt="Estudio Tahmek" width="200" />
+        <img src="images/tahmek-contrast.jpg" alt="Estudio Tahmek" width="200" />
         <p>
           Estudio Tahmek's website is an excellent example of how it has contrast. The background is black, and then the
           words are orange. This highlight the design and make it memorable for the viewers. This also helps lead the
