--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
       <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
       <li>Lesson 01: <a href="lesson1/design-principles.html">Design Principles Document</a></li>
+      <li>Lesson 02: <a href="lesson2/index.html">Website Planning</a></li>
 
     </ul>
   </main>
@@ -36,7 +37,6 @@
     <p>
       <span id="last_update"></span>
     </p>
-
   </footer>
   <script src="js/dates.js"></script>
 
