--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
       <li>Lesson 01: <a href="lesson1/design-principles.html">Design Principles Document</a></li>
       <li>Lesson 02: <a href="lesson2/index.html">Website Planning</a></li>
+      <li>Lesson 02: <a href="lesson2/index.html">Preston Town Page Start</a></li>
+
 
     </ul>
   </main>
