planning document done

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -9,7 +9,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Outfit:wght@200&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap"
     rel="stylesheet" />
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -22,9 +22,9 @@
 
 <body>
   <header>
-    <div class="title">
+    <div class="box">
       <h1>
-        Weather Project<br /><span class="byline">Planning Document</span>
+        Weather Project - Planning Document
       </h1>
     </div>
 
@@ -48,31 +48,25 @@
 
   <main>
     <h2>Site Name:</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum similique, est at, atque esse dignissimos
-      error
-      repudiandae rerum in ducimus nemo ad cumque quia iste quod sint numquam maxime perferendis!
-    </p>
+    <p>The Weather Fit </p>
 
     <h2>Site Purpose:</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui porro maiores iure labore atque voluptatibus
-      quisquam odit temporibus minima saepe tempora maxime, similique eaque iste quod, vel ipsam quo quae!
-    </p>
+    <p>The purpose of this site is that people can access how the weather will be and plan their perfect outfits
+      according to their plans for the day. </p>
 
     <h2>Site URL:</h2>
-    <p>http://www.x.com</p>
+    <p>http://www.theweatherfit.com</p>
 
     <h2>Site Logo:</h2>
-    <img class="logo" src="" alt="logo" />
+    <img class="logo" src="images/logo.png" alt="logo" width="150" />
+
     <h2>Site Motto:</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam molestiae ipsam quo? Soluta placeat vitae ipsa
-      eaque quis, sapiente quas perspiciatis reprehenderit voluptates quidem tempora, earum minus voluptate iusto
-      aperiam?
-    </p>
+    <p>Choose the perfect outfit based on the weather of the day</p>
   </main>
 
   <footer>
-    <p>&copy; <span id="year"></span> | Naomi Gonzalez | Mexico
-      <a href="https://www.byui.edu/online"> | BYUI Online Learning</a></p>
+    <p>&copy; <span id="year"></span> | Naomi Gonzalez | Mexico |
+      <a href="https://www.byui.edu/online"> BYUI Online Learning</a></p>
     <p>
       <span id="last_update"></span>
     </p>
