--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
       <li>Lesson 01: <a href="lesson1/design-principles.html">Design Principles Document</a></li>
       <li>Lesson 02: <a href="lesson2/index.html">Website Planning</a></li>
-      <li>Lesson 02: <a href="lesson2/index.html">Preston Town Page Start</a></li>
+      <li>Lesson 02: <a href="weather/preston.html">Preston Town Page Start</a></li>
 
 
     </ul>
